RESOLVED FIXED286768
Hitting a release assertion in the WebExtension constructor if the resource URL doesn't contain a trailing slash
https://bugs.webkit.org/show_bug.cgi?id=286768
Summary Hitting a release assertion in the WebExtension constructor if the resource U...
Elijah Sawyers
Reported 2025-01-30 13:02:25 PST
Attachments
Elijah Sawyers
Comment 1 2025-01-30 14:08:52 PST
EWS
Comment 2 2025-01-31 10:28:07 PST
Committed 289614@main (e02f981365ed): <https://commits.webkit.org/289614@main> Reviewed commits have been landed. Closing PR #39784 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.