Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtension.mm
@@ -2121,6 +2121,30 @@ TEST(WKWebExtension, LoadFromDirectory)
     [manager run];
 }
 
+TEST(WKWebExtension, LoadFromDirectoryWithoutTrailingSlash)
+{
+    TestWebKitAPI::HTTPServer server({
+        { "/"_s, { { { "Content-Type"_s, "text/html"_s } }, ""_s } }
+    }, TestWebKitAPI::HTTPServer::Protocol::Http);
+
+    auto *extensionURLAbsoluteString = [NSBundle.test_resourcesBundle URLForResource:@"web-extension" withExtension:@""].absoluteString;
+    auto *extensionURLAbsoluteStringWithoutTrailingSlash = [extensionURLAbsoluteString substringToIndex:extensionURLAbsoluteString.length - 1];
+    auto *extensionURL = [NSURL URLWithString:extensionURLAbsoluteStringWithoutTrailingSlash];
+    EXPECT_NOT_NULL(extensionURL);
+
+    auto extension = adoptNS([[WKWebExtension alloc] _initWithResourceBaseURL:extensionURL error:nullptr]);
+    auto manager = adoptNS([[TestWebExtensionManager alloc] initForExtension:extension.get()]);
+
+    [manager load];
+    [manager runUntilTestMessage:@"Load Tab"];
+
+    auto *urlRequest = server.requestWithLocalhost();
+    [manager.get().context setPermissionStatus:WKWebExtensionContextPermissionStatusGrantedExplicitly forURL:urlRequest.URL];
+    [manager.get().defaultTab.webView loadRequest:urlRequest];
+
+    [manager run];
+}
+
 TEST(WKWebExtension, LoadFromZipArchiveWithoutParentDirectory)
 {
     TestWebKitAPI::HTTPServer server({
